examples/examples/dynamic_tabs/snapshots/dynamic_tabs__tests____test_tabs-2.snap
---
source: examples/examples/dynamic_tabs/tests.rs
expression: harness.terminal().backend().buffer()
---
Buffer {
    area: Rect { x: 0, y: 0, width: 40, height: 10 },
    content: [
        "┌Demo───────────────┐╭───╮              ",
        "│ Tab1  ✕ │ Tab2  ✕ ││ + │              ",
        "└───────────────────┘╰───╯              ",
        "tab2                                    ",
        "                                        ",
        "                                        ",
        "                                        ",
        "                                        ",
        "                                        ",
        "                                        ",
    ],
    styles: [
        x: 0, y: 0, fg: Blue, bg: Reset, underline: Reset, modifier: NONE,
        x: 21, y: 0, fg: Gray, bg: Reset, underline: Reset, modifier: NONE,
        x: 26, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: Blue, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 1, fg: Red, bg: Reset, underline: Reset, modifier: NONE,
        x: 9, y: 1, fg: Blue, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 1, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 1, fg: Blue, bg: Reset, underline: Reset, modifier: NONE,
        x: 18, y: 1, fg: Red, bg: Reset, underline: Reset, modifier: NONE,
        x: 19, y: 1, fg: Blue, bg: Reset, underline: Reset, modifier: NONE,
        x: 21, y: 1, fg: Gray, bg: Reset, underline: Reset, modifier: NONE,
        x: 22, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 23, y: 1, fg: Green, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 25, y: 1, fg: Gray, bg: Reset, underline: Reset, modifier: NONE,
        x: 26, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 2, fg: Blue, bg: Reset, underline: Reset, modifier: NONE,
        x: 21, y: 2, fg: Gray, bg: Reset, underline: Reset, modifier: NONE,
        x: 26, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
