examples/examples/dynamic_tabs/snapshots/dynamic_tabs__tests____test_tabs-4.snap
---
source: examples/examples/dynamic_tabs/tests.rs
expression: harness.terminal().backend().buffer()
---
Buffer {
    area: Rect { x: 0, y: 0, width: 40, height: 10 },
    content: [
        "                                        ",
        " ┌Demo───────────────┐╭───╮             ",
        " │ Tab1  ✕ │ Tab2  ✕ ││ + │             ",
        " └───────────────────┘╰───╯             ",
        "  tab2                                  ",
        "                                        ",
        "                                        ",
        "                                        ",
        "                                        ",
        "                                        ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 1, fg: Blue, bg: Reset, underline: Reset, modifier: NONE,
        x: 22, y: 1, fg: Green, bg: Reset, underline: Reset, modifier: NONE,
        x: 27, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 2, fg: Blue, bg: Reset, underline: Reset, modifier: NONE,
        x: 9, y: 2, fg: Red, bg: Reset, underline: Reset, modifier: NONE,
        x: 10, y: 2, fg: Blue, bg: Reset, underline: Reset, modifier: NONE,
        x: 13, y: 2, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 17, y: 2, fg: Blue, bg: Reset, underline: Reset, modifier: NONE,
        x: 19, y: 2, fg: Red, bg: Reset, underline: Reset, modifier: NONE,
        x: 20, y: 2, fg: Blue, bg: Reset, underline: Reset, modifier: NONE,
        x: 22, y: 2, fg: Green, bg: Reset, underline: Reset, modifier: NONE,
        x: 23, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 2, fg: Green, bg: Reset, underline: Reset, modifier: NONE,
        x: 25, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 26, y: 2, fg: Green, bg: Reset, underline: Reset, modifier: NONE,
        x: 27, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 3, fg: Blue, bg: Reset, underline: Reset, modifier: NONE,
        x: 22, y: 3, fg: Green, bg: Reset, underline: Reset, modifier: NONE,
        x: 27, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
